@@ -3195,7 +3195,8 @@ pid_t _sh_fork(Shell_t *shp,register pid_t parent,int flags,int *jobid)
 	/* except for those `lost' by trap   */
 	if(!(flags&FSHOWME))
 		sh_sigreset(2);
-	shp->subshell = 0;
+	SH_SUBSHELLNOD->nvalue.s++;	/* increase ${.sh.subshell} */
+	shp->subshell = 0;		/* zero virtual subshells */
 	shp->comsub = 0;
 	shp->spid = 0;
 	if((flags&FAMP) && shp->coutpipe>1)
